package DZ5.accautingUser.view;

public enum Commands {
    NONE,
    READ,
    CREATE,
    UPDATE,
    LIST,
    DELETE,
    EXIT
}
