package DZ5.accautingUser.view;

public interface CommandsInt {
    void method() throws Exception;
}
